--- a/index.html
+++ b/index.html
@@ -5,25 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotspot | Internetan anti gabut</title>
-    <link rel="stylesheet" href="./css/bootstrap.css">
-    <script src="./js/bootstrap.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-            <div class="navbar-brand h1" href="#">Flithings</div>
-            <ul class="navbar-nav text-centered ">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Hotspot</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Tentang Kami</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Lainnya</a>
-                </li>
-            </ul>
+    <nav class="navbar">
+        <a class="logo" href="#">Flithings</a>
+        <div class="navlinks">
+            <a class="nav-link active" href="#">Hotspot</a>
+            <a class="nav-link" href="#">Kontak</a>
+            <a class="nav-link" href="#">Lainnya</a>
         </div>
     </nav>
 </body>
