--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <a class="logo" href="#">Flithings</a>
-        <div class="navlinks">
+        <div class="nav-right">
             <a class="nav-link active" href="#">Hotspot</a>
             <a class="nav-link" href="#">Kontak</a>
             <a class="nav-link" href="#">Lainnya</a>
