Homepage UI Completed

--- a/index.html
+++ b/index.html
@@ -11,13 +11,44 @@
 
 <body>
     <nav class="navbar">
-        <a class="logo" href="#">Flithings</a>
+        <a class="logo" href="#"><img src="./img/logo.png" alt="flithings-hotspot.png" height="55px"></a>
         <div class="nav-right">
-            <a class="nav-link active" href="#">Hotspot</a>
+            <a class="nav-link" href="#">Tentang Kami</a>
             <a class="nav-link" href="#">Kontak</a>
             <a class="nav-link" href="#">Lainnya</a>
         </div>
     </nav>
+    <div class="section">
+        <div class="sec-left">
+            <div class="masuk">
+                <form class="form" action="">
+                    <h1>Internet Ngebut Anti Gabut!</h1>
+                    <h4>Masuk dan mulai internetan sesuka kamu</h4>
+                    <div class="inputs">
+                        <div class="email">
+                            <label for="">Email</label>
+                            <input type="text" placeholder="Masukan Email">
+                        </div>
+                        <div class="password">
+                            <label for="">Password</label>
+                            <input type="password" placeholder="Masukan Password">
+                        </div>
+                        <span class="disclaim"><span style="color: orangered;">*</span>Website ini dibuat dan
+                            diperuntukan
+                            hanya untuk <a class="link" href="./index.html">Flithings</a></span>
+                        <button>Login</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="vector">
+            <img src="./img/vector-login.svg" alt="vector-login" width="520">
+        </div>
+    </div>
+    <div class="copyright">
+        <span>©Copyright Flithings 2023</span>
+        <span>Special Thanks to Rafli Sultan Hakim</span>
+    </div>
 </body>
 
 </html>
