--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="icon" href="./img/web-icon.png">
     <link rel="stylesheet" href="./style.css">
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-37G5QTPNL7"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-37G5QTPNL7');
+    </script>
 </head>
 
 <body>
@@ -27,12 +36,12 @@
                     <h4>Masuk dan mulai internetan sesuka kamu</h4>
                     <div class="inputs">
                         <div class="email">
-                            <label for="">Email</label>
-                            <input type="text" placeholder="Masukan Email">
+                            <label for="email">Email</label>
+                            <input type="text" id="email" placeholder="Masukan Email">
                         </div>
                         <div class="password">
-                            <label for="">Password</label>
-                            <input type="password" placeholder="Masukan Password">
+                            <label for="password">Password</label>
+                            <input type="password" id="password" placeholder="Masukan Password">
                         </div>
                         <span class="disclaim"><span style="color: orangered;">*</span>Website ini dibuat dan
                             diperuntukan
